# evalforge

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: hello_anthropic.py  hello_openai.py
src/evalforge/: models.py
src/evalforge/providers/: anthropic.py  base.py
