[project]
   name = "evalforge"
   version = "0.0.1"
   description = "An evaluation framework for LLM applications."
   readme = "README.md"
   requires-python = ">=3.11"
   dependencies = [
       "anthropic>=0.40.0",
       "openai>=1.50.0",
       "together>=1.3.0",
       "pydantic>=2.9.0",
       "click>=8.1.0",
       "rich>=13.9.0",
       "python-dotenv>=1.0.0",
   ]

   [project.scripts]
   evalforge = "evalforge.cli:main"

   [build-system]
   requires = ["setuptools>=68"]
   build-backend = "setuptools.build_meta"

   [tool.setuptools.packages.find]
   where = ["src"]
